# onebot-sdk

./: Cargo.toml
src/: error.rs  lib.rs
src/client/: mod.rs
src/event/: message.rs  meta.rs  mod.rs  registry.rs
